Committing structure changes to zelig.tex

--- a/inst/doc/last_build/zelig.tex
+++ b/inst/doc/last_build/zelig.tex
@@ -6,7 +6,12 @@
   \url{http://gking.harvard.edu/zelig}, free of charge and open-source
   (under the terms of the GNU GPL, v2)}
 }
-\author{  Kosuke Imai\thanks{Assistant Professor, Department of Politics,
+\author{
+  Matt Owen\thanks{Statistical Programmer, Institute for Quantitative Social
+  Sciences, Harvard University; \url{http://people.iq.harvard.edu/\~mowen/},
+  \texttt{mowen@iq.harvard.edu}}
+  \and
+  Kosuke Imai\thanks{Assistant Professor, Department of Politics,
   Princeton University
   (Corwin Hall, Department of Politics, Princeton University, Princeton NJ 08544;
   \url{http://imai.princeton.edu/}, \texttt{kimai@princeton.edu})}
@@ -77,7 +82,7 @@
 \input{robjects}
 
 % Part: BASIC ZELIG
-\part{R Basics}
+\part{Basic Zelig Commands}
 \label{part:R Basics}
 
 \chapter[Zelig Commands]{Zelig Commands}
@@ -89,7 +94,7 @@
 \input{graphs}
 
 % Part: ZELIG API
-\part{The Zelig API}
+\part{The Zelig Developers' API}
 \label{part:The Zelig API}
 
 \chapter[Development Guide]{Rapid Development Guide}
